# Backend-Server

./: .dockerignore  .gitignore  ADMIN_DELETE_MEETING_FEATURE.md  BOOKING_SYSTEM_GUIDE.md  COVER_IMAGE_API.md  Dockerfile  NOTICE_FILE_DOWNLOAD_DOCS.md  PROPERTY_API.md  README.md  SYSTEM_OVERVIEW.md  TEAM_SEARCH_FIX.md  docker-compose.yml  main.py  migration_add_admin_reply.sql  pyproject.toml  token_demo.py
authMiddleware/: authMiddleware.py  roleMiddleware.py
config/: fileUpload.py  nodemailer.py
controller/: applicationController.py  boardSupportController.py  contactController.py  maintenanceRequestController.py  noticeController.py  propertyController.py  propertyMediaController.py  propertyRecommendationController.py  scheduleMeetingController.py  screeningQuestionController.py  teamController.py  tidyCalController.py  userController.py
dbConnection/: dbConfig.py  dbSync.py
emailService/: applicationEmail.py  authEmail.py  chatbotEmail.py  contactEmail.py  maintenanceRequestEmail.py  meetingEmail.py  recommendationEmail.py
model/: applicationModel.py  chatbotModel.py  contactModel.py  maintenanceRequestModel.py  noticeModel.py  propertyMediaModel.py  propertyModel.py  propertyRecommendationModel.py  scheduleMeetingModel.py  screeningQuestionModel.py  teamModel.py  tidyCalModel.py  userModel.py
routes/: applicationRoute.py  authRoute.py  boardSupportRoute.py  chatbotRoute.py  contactRoute.py  maintenanceRequestRoute.py  noticeRoute.py  profileRoute.py  propertyRecommendationRoute.py  propertyRoute.py  scheduleMeetingRoute.py  screeningQuestionRoute.py  (+3 more)
(+32 files in other folders)
